--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
