--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tinymce/tinymce-react": "^5.1.1",
     "dompurify": "^3.2.3",
+    "highlight.js": "^11.11.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
